Removed and fixed horizontal scroll for saved-news mobile version

--- a/src/components/SavedNewsCardsMap/SavedNewsCardsMap.css
+++ b/src/components/SavedNewsCardsMap/SavedNewsCardsMap.css
@@ -66,12 +66,17 @@
 
 @media screen and (max-width: 320px) {
   .saved__news_list {
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     /* border: solid purple; */
+    display: flex;
+    justify-content: center;
     row-gap: 16px;
     padding-top: 0px;
     margin-top: 24px;
     margin-bottom: 32px;
+    width: 320px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .saved__news_wrapper {
